# rfid

./: .gitignore  Cargo.toml
src/api/: Cargo.toml
src/api/benches/: api.rs
src/api/src/: lib.rs
src/api/src/api/: error.rs  lock_pattern_builder.rs  mod.rs  uhf_rfid_api.rs
src/api/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/api/src/rfid_device/: mod.rs  usb_device.rs
src/app/: Cargo.toml
src/app/src/: main.rs
src/app/src/cli/: app.rs  commands.rs  menu.rs  mod.rs
src/app/src/cli/handlers/: device_action.rs  device_info.rs  inventory.rs  lock.rs  mod.rs  password.rs  raw_command.rs  read.rs  test.rs  utils.rs  write.rs
src/app/src/tui/: app.rs  mod.rs
src/app/src/tui/components/: form_device_action.rs  form_lock.rs  form_password.rs  form_raw.rs  form_read.rs  form_write.rs  main_ui.rs  menu_main.rs  mod.rs  panel_device_info.rs
src/protocol/: Cargo.toml
src/protocol/src/: interface.rs  lib.rs  types.rs
workspace-hack/: Cargo.toml
workspace-hack/src/: lib.rs
