[package]
name = "app"
description = "Terminal/CLI App to interact with USB RFID Device"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
api = { workspace = true }
protocol = { workspace = true }
workspace-hack = { workspace = true }

clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true }
colorful = { workspace = true }
strum = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]

[build-dependencies]

[[bin]]
name = "app"
path = "src/main.rs"

[[bench]]
name = "app"
harness = false